# firmcraft-site

./: .gitignore  ROADMAP.md  alternative-funding-research.md  cloudflare-access-setup.md  firmcraft-sales-playbook-robert.docx  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
admin/: .env.example  README.md  package-lock.json  package.json  tailwind.config.ts
design/: tailwind.config.js  tokens.css
design-spec/: 01_home.html  02_playbooks.html  03_capabilities.html  04_security.html  05_integrations.html  README.md
dispatch-optimizer/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
dispatch-optimizer/src/: __init__.py  config.py  db.py  dispatch.py  distance.py  main.py  models.py  scoring.py  solver.py
dispatch-optimizer/tests/: conftest.py  factory.py  test_api_auth.py  test_apply.py  test_benchmark.py  test_distance.py  test_integration.py  test_scoring.py  test_solver.py
docs/: PHASE1-AI-PHONE-ANSWERING-SPEC.md  PHASE1-DECISIONS.md  README.md  ai-scheduling-dispatch-research.md  billing-spec.md  brand-strategy-actions.md  digital-ops-research.md  firmcraft-credentials-template.md  firmcraft-email-signature-robert.html  firmcraft-email-signature.html  firmcraft-google-workspace-setup.md  firmcraft-weekend-buildout-plan.md  gbp-api-application-checklist.md  gbp-setup-plan.md  hermes-provisioning-hardening.md  houston-hvac-prospect-research.md  phase2-code-review.md  resend-firmcraft-mail-setup.md  scheduling-dispatch-architecture.md  scheduling-dispatch-build-plan.md  (+3 more)
(+323 files in other folders)
